--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <html>
+    <head>
+       <meta charset="utf-8">
+        <title> docplus  </title>
+        <link rel="stylesheet" href="style.css">
+    </head>
     <body>
         <header>
-            <img src="/uploads/2020/12/folder-303891_1280_0_1606895367.png"/>
+            <img src="https://learn.algoritmika.org/uploads/2020/12/folder-303891_1280_0_1606895367.png"/>
             <a href="">Курсы</a>
             <a href="">Пробные занятия</a>
         </header>
         <main>
-            <h1>Школа <br/>копирайтинга Doc+<br/><img src="/uploads/2020/12/list-2389219_1280_0_1606895367.png"/></h1>
-            <p><img src="/uploads/2020/12/gui-2457113_1280_0_1606895367.png"/><img src="/uploads/2020/12/word-cloud-679937_1280_0_1606895368.png"/></p>
+            <h1>Школа <br/>копирайтинга Doc+<br/><img src="https://learn.algoritmika.org/uploads/2020/12/list-2389219_1280_0_1606895367.png"/></h1>
+            <p><img src="https://learn.algoritmika.org/uploads/2020/12/gui-2457113_1280_0_1606895367.png"/></p>
         </main>
         <footer>
             <p>Адрес: д. Творческая, ул. 1-ая Деревенская, д.11</p>
